# ABC2025_main_controller

./: .gitignore  README.md  depth_image_node.py
assets/: custom.rviz  rivz_config.rviz  rtabmap.sh  sitl_targets_gazebo-classic.cmake
camera_calibration/: inverse_projection_transform.py  zed_calibration.yaml  zed_calibration_formatted.yaml
depth_detection/: package.xml  setup.cfg  setup.py
depth_detection/depth_detection/: depth_detector.py
depth_detection/depth_yolo_pkg/: depth_zed.py
image_detection/: package.xml  setup.cfg  setup.py
image_detection/image_detection/: image_detector.py
image_detection/launch/: image_v4l2.launch.py  image_v4l2_launch.py
my_msgs/: CMakeLists.txt
my_msgs/msg/: DepthActivated.msg  YoloDetection.msg
path_generation/: setup.py
path_generation/path_generation/: dstar_bezier_path_planner.py
path_generation/test/: yolo_publisher.py
shit_controller/: package.xml  setup.py
shit_controller/shit_controller/: controller_01.py  obstacle_speaker.py  servo_pwm_test.py  test_01.py  test_02_approach.py
src/camera_calibration/: camera_calibration.py  inverse_projection_transform.py  zed_calibration_1.py  (+1 more)
src/path_generation/: package.xml  setup.py
src/path_generation/path_generation/: Drone_Commander.py  astar_fixed_start.py  astar_fixed_start_simulation.py  astar_zed_start.py  astar_zed_start_edited.py  dstar_bezier_path_planner.py  exampl_dstar_lite_path_planner.py  pointcloud.py  publish_pcd.py
src/path_generation/test/: DynamicPCLPublisher.py  pcl_publisher.py  yolo_publisher.py
yolo_detection/: package.xml  setup.py
(+74 files in other folders)
