<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_generation</name>
  <version>0.0.1</version>
  <description>Path generation package using D* Lite and Bezier Curve in ROS 2</description>
  <maintainer email="yoonho@todo.todo">yoonho</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 필수 패키지 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Point Cloud Library (PCL) 관련 패키지 -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Python 의존성 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pcl</exec_depend>
  <exec_depend>python3-bezier</exec_depend>

  <!-- 테스트 및 코드 품질 검사 도구 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
